Fixed children overflowing problem with flex parent in IE
Now the body is absolute positionated, reliable and cross browser

--- a/src/components/base/_base.scss
+++ b/src/components/base/_base.scss
@@ -38,8 +38,7 @@ html {
 
   font-size: $font-size;
   box-sizing: border-box;
-  display: flex;
-  min-width: 100%;
+  width: 100%;
   min-height: 100%;
 
   -webkit-tap-highlight-color: transparent;
@@ -56,12 +55,10 @@ html {
 
 body {
   @include color ( $body-color );
+  @include fill-absolute (); //INFO: It fixes a bug in IE where flexbox children elements don't displays into multiple lines but into a long one if not stirctly forbidden by rules like this
   font-family: $font-family;
   font-size: 1em;
   line-height: $line-height;
-  display: flex;
-  min-width: 100%;
-  min-height: 100%;
 }
 
 /* #CONTENT */
@@ -72,12 +69,6 @@ body {
   flex-direction: column;
   transition: margin $navbar-transition-transform-duration;
   flex-grow: 1;
-
-  > header,
-  > main,
-  > footer {
-    width: 100vw; //INFO: It fixes a bug in IE where flexbox children elements don't displays into multiple lines but into a long one if not stirctly forbidden by rules like this
-  }
 
   > header {
 
